<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/category"
        android:icon="@drawable/ic_category"
        app:showAsAction="ifRoom"
        android:title="@string/category" />

    <item
        android:id="@+id/history"
        android:icon="@drawable/ic_history"
        app:showAsAction="ifRoom"
        android:title="@string/history" />

    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_baseline_search_24"
        app:showAsAction="ifRoom"
        android:title="@string/search" />

    <item
        android:id="@+id/favorite"
        android:icon="@drawable/ic_favorite"
        app:showAsAction="ifRoom"
        android:title="@string/favorite" />

    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_settings"
        app:showAsAction="ifRoom"
        android:title="@string/settings" />

</menu>