<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true"
    tools:context=".presentation.ui.DetailFragment">


    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/appBar"
        android:theme="@style/Theme.AppCompat.NoActionBar"
        android:background="@color/transparent"
        >


        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="320dp"
            app:contentScrim="@color/yellow"
            app:expandedTitleMarginStart="16dp"
            app:expandedTitleMarginEnd="72dp"
            app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed">

            <ImageView
                android:id="@+id/iv_image"
                android:layout_width="270dp"
                android:layout_height="270dp"
                android:layout_gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />



            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="12dp"
                android:paddingTop="8dp"
                android:paddingEnd="4dp"
                android:paddingBottom="8dp"
                android:layout_margin="10dp"
                android:layout_gravity="start"
                android:background="@drawable/btn_bg2"
                android:id="@+id/imgToolbarBtnBack"
                android:src="@drawable/ic_back"
                />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:layout_margin="10dp"
                android:layout_gravity="end"
                android:id="@+id/imgToolbarBtnFav"
                android:background="@drawable/btn_bg2"
                android:src="@drawable/ic_fav_unfill"
                />



        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>


    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:background="@drawable/bg_circle_radius_primary"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_margin="10dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvDrink"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/drink_name"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="25sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />


                            <TextView
                                android:id="@+id/tvTime"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:maxEms="10"
                                android:maxLines="2"
                                android:paddingStart="5dp"
                                android:paddingTop="10dp"
                                android:paddingBottom="10dp"
                                android:text=""
                                android:textSize="15sp"
                                android:textStyle="bold" />
                        </LinearLayout>


                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />


                            <TextView
                                android:id="@+id/tvServing"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:maxEms="10"
                                android:maxLines="2"
                                android:paddingStart="5dp"
                                android:paddingTop="10dp"
                                android:paddingBottom="10dp"
                                android:text=""
                                android:textSize="15sp"
                                android:textStyle="bold" />
                        </LinearLayout>

                    </LinearLayout>


                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tv_drink_ingredient_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:text="@string/ingredient"
                android:textColor="@color/black"
                android:textSize="22sp"
                app:layout_constraintBottom_toTopOf="@id/tv_ingredient_detail" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_ingredient_detail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="5dp"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tv_drink_detail_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:text="@string/instructions"
                android:textColor="@color/black"
                android:textSize="22sp"
                app:layout_constraintBottom_toTopOf="@id/tv_drink_detail" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_drink_detail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="5dp"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <ProgressBar
                android:id="@+id/progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>



</androidx.coordinatorlayout.widget.CoordinatorLayout>